# harbour-yast-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  harbour-ferniegram.desktop  harbour-fernschreiber2.desktop  harbour-fernschreiber2.pro  harbour-yast-client.desktop  libabsl.cmake
.github/workflows/: main.yml  update-translations.yml
doc/: development.md  tg_owt.md
qml/: CallWindow.qml  harbour-ferniegram.qml  harbour-fernschreiber2.qml  harbour-yast-client.qml
qml/components/: AppNotification.qml  ChatActionIcon.qml  ChatHeaderText.qml  ChatListViewItem.qml  ChatsView.qml  InReplyToRow.qml  MessageListViewItem.qml  MessageListViewItemSimple.qml  MessageOverlayFlickable.qml  MessagePropertiesLoader.qml  MessagesView.qml  NewMessageColumn.qml  OverviewPageHeader.qml  PhotoTextsGridItem.qml  PhotoTextsListItem.qml  PinnedMessageItem.qml  ProfilePictureList.qml  ProfileThumbnail.qml  TDLibChatListItem.qml  TDLibImage.qml  TDLibMessageSender.qml  TDLibPhoto.qml  TDLibSticker.qml  TDLibStickerBase.qml  TDLibUser.qml  TDLibVideo.qml  VoiceNoteOverlay.qml  Wallpaper.qml
qml/components/chat/: ChatBotSponsoredMessageItem.qml  ChatManagerLoader.qml  ChatPendingJoinRequestsItem.qml  InReplyToRow.qml  InlineQuery.qml  MessageListViewItem.qml  MessageListViewItemSimple.qml  MessageOverlayFlickable.qml  MessageViaLabel.qml  MessagesView.qml  NewMessageColumn.qml  PinnedMessageItem.qml  ReplyMarkupButtons.qml  SponsoredMessage.qml  StickerSetOverlay.qml  TopicsListView.qml  VoiceNoteOverlay.qml  WebPagePreview.qml
qml/components/chat/inlineQueryResults/: InlineQueryResultAnimation.qml  (+9 more)
qml/components/chatInformationPage/: ChatInformationPageContent.qml  ChatInformationTabItemBase.qml  ChatInformationTabItemDebug.qml  ChatInformationTabItemFiles.qml  ChatInformationTabItemMedia.qml  ChatInformationTabItemMediaGrid.qml  ChatInformationTabItemMembersGroups.qml  ChatInformationTabItemSettings.qml  ChatInformationTabView.qml  EditGroupChatPermissionsColumn.qml
qml/components/chatList/: ChatListViewItem.qml  ChatsView.qml
qml/components/inlineQueryResults/: InlineQueryResultGame.qml
qml/components/messageContent/: AlbumMessageContentBase.qml  MessageAnimatedEmoji.qml  MessageAudioAlbum.qml  MessageContentBase.qml  MessageContentFileInfoBase.qml  MessageDice.qml  MessageDocument.qml  MessageDocumentAlbum.qml  MessageGame.qml  MessagePhoto.qml  MessagePhotoAlbum.qml  MessagePoll.qml  MessageSticker.qml  MessageVideo.qml
qml/components/settingsPage/: SettingsAdvanced.qml  SettingsAppearance.qml  SettingsArchiveChatList.qml  SettingsBehavior.qml  SettingsPrivacy.qml  SettingsSession.qml  SettingsStorage.qml  SettingsUserProfile.qml
qml/dialogs/: AddContactDialog.qml  BackgroundSelectionDialog.qml  DurationPickerDialog.qml
qml/harbour/components/: MessageListViewItem.qml  PhotoTextsListItem.qml  ProfileThumbnail.qml
qml/harbour/dialogs/: ChatJoinDialog.qml
qml/harbour/pages/: ChatPage.qml  OverviewPage.qml  PollCreationPage.qml  TranslatePage.qml
qml/js/: debug.js  functions.js  twemoji.js
qml/pages/: AboutPage.qml  ArchivedChatsPage.qml  CallCover.qml  CallPage.qml  ChatInformationPage.qml  ChatPage.qml  ChatPhotosPage.qml  ChatSelectionPage.qml  CoverPage.qml  CustomizeNotificationsPage.qml  DebugPage.qml  ImagePage.qml  InitializationPage.qml  MediaAlbumPage.qml  NewChatPage.qml  NotificationSoundSelectionPage.qml  OverviewPage.qml  PollCreationPage.qml  PollResultsPage.qml  ProfilePicturesPage.qml  ProxiesPage.qml  SearchChatsPage.qml  SettingsPage.qml  TranslatePage.qml
qml/shared/js/: functions.js
rpm/: harbour-ferniegram.spec  harbour-fernschreiber2.changes  harbour-fernschreiber2.spec  harbour-fernschreiber2.yaml  harbour-yast-client.changes  harbour-yast-client.spec
src/: appsettings.cpp  appsettings.h  chatdata.cpp  chatdata.h  chatfoldersmodel.cpp  chatlistmodel.cpp  chatlistmodel.h  chatmanager.cpp  chatmanager.h  chatmodel.cpp  chatmodel.h  contactsmodel.cpp  contactsmodel.h  debuglog.h  emojisearchworker.cpp  fernschreiberutils.cpp  fernschreiberutils.h  forumtopicsmodel.cpp  harbour-ferniegram.cpp  harbour-fernschreiber2.cpp  harbour-yast-client.cpp  invertedproxymodel.cpp  notificationmanager.cpp  notificationmanager.h  readablemessagesmodel.h  stickermanager.cpp  stickermanager.h  tdlibreceiver.cpp  tdlibreceiver.h  tdlibstate.cpp  tdlibstate.h  tdlibwrapper.cpp  tdlibwrapper.h  utilities.cpp  utilities.h  voicenoterecorder.cpp
src/chat/: chatmanager.cpp  chatmanager.h  forumtopic.cpp  forumtopic.h  forumtopicmessagesmodel.cpp  forumtopicmessagesmodel.h  forumtopicsmodel.cpp  forumtopicsmodel.h  invertedmessagesmodel.h  jumpablemessagesmodel.cpp  jumpablemessagesmodel.h  mediamessagesmodel.cpp  mediamessagesmodel.h  messagedata.cpp  messagedata.h  messagesmodel.cpp  messagesmodel.h  readablemessagesmodel.cpp  readablemessagesmodel.h
src/tdlib/: tdlibreceiver.cpp  tdlibreceiver.h  tdlibwrapper.cpp  tdlibwrapper.h
translations/: harbour-ferniegram-de.ts  harbour-ferniegram-en.ts  harbour-ferniegram-es.ts  harbour-ferniegram-fi.ts  harbour-ferniegram-hu.ts  harbour-ferniegram-it.ts  harbour-ferniegram-pl.ts  harbour-ferniegram-ru.ts  harbour-ferniegram-sk.ts  harbour-ferniegram-sv.ts  harbour-ferniegram-zh_CN.ts  harbour-fernschreiber-de.ts  harbour-fernschreiber-en.ts  harbour-fernschreiber-es.ts  harbour-fernschreiber-fi.ts  harbour-fernschreiber-fr.ts  harbour-fernschreiber-hu.ts  harbour-fernschreiber-it.ts  harbour-fernschreiber-pl.ts  harbour-fernschreiber-ru.ts  harbour-fernschreiber-sk.ts  harbour-fernschreiber-sv.ts  harbour-fernschreiber2-de.ts  harbour-fernschreiber2-en.ts  harbour-fernschreiber2-es.ts  harbour-fernschreiber2-fi.ts  harbour-fernschreiber2-fr.ts  harbour-fernschreiber2-hu.ts  harbour-fernschreiber2-it.ts  harbour-fernschreiber2-pl.ts  harbour-fernschreiber2-ru.ts  harbour-fernschreiber2-sk.ts  harbour-fernschreiber2-sv.ts  harbour-fernschreiber2-zh_CN.ts  harbour-fernschreiber2.ts  harbour-yast-client-de.ts  harbour-yast-client-en.ts  harbour-yast-client-es.ts  harbour-yast-client-fi.ts  harbour-yast-client-fr.ts  (+8 more)
(+17 files in other folders)
